# mosaico-lib

./: .gitignore  LICENSE  README.mdown  default.nix  mosaico-lib.cabal  shell.nix
src/Graphics/Mosaico/: Diagrama.hs  División.hs  Imagen.hs  Ventana.hs
