name:          mosaico-lib
version:       0.1.0.0
synopsis:      Generación interactiva de mosaicos
homepage:      http://ldc.usb.ve/~05-38235/cursos/CI3661/2015AJ/
license:       BSD3
license-file:  LICENSE
author:        Manuel Gómez
maintainer:    targen@gmail.com
copyright:     ⓒ Manuel Gómez, 2015
category:      Graphics
build-type:    Simple
cabal-version: >=1.10
-- extra-source-files:

library
  hs-source-dirs:   src
  default-language: Haskell2010
  exposed-modules:
    Graphics.Mosaico.División
    Graphics.Mosaico.Imagen
    Graphics.Mosaico.Ventana
  -- other-modules:
  ghc-options:
    -Wall
    -O2
  other-extensions:
    LambdaCase       ,
    NoImplicitPrelude,
    RecordWildCards  ,
    UnicodeSyntax
  build-depends:
    JuicyPixels          >= 3.2  && < 3.3 ,
    base                 >= 4.7  && < 4.8 ,
    base-unicode-symbols >= 0.2  && < 0.3 ,
    colour               >= 2.3  && < 2.4 ,
    diagrams-cairo       >= 1.2  && < 1.3 ,
    diagrams-core        >= 1.2  && < 1.3 ,
    diagrams-gtk         >= 1.0  && < 1.1 ,
    diagrams-lib         >= 1.2  && < 1.3 ,
    glib                 >= 0.13 && < 0.14,
    gtk                  >= 0.13 && < 0.14,
    mtl                  >= 2.1  && < 2.2 ,
    split                >= 0.2  && < 0.3 ,
    stm                  >= 2.4  && < 2.5 ,
    stm-chans            >= 3.0  && < 3.1 ,
    transformers         >= 0.3  && < 0.4
